tests/negative/neg_task_shared_subprogram_global.safe
-- Test: neg_task_shared_subprogram_global
-- Description: Two tasks reach package-global effects through shared callees.
--   The reachability is genuinely transitive through Wrapper -> Helper.
-- Expected: REJECT task_variable_ownership

package neg_Task_Shared_Subprogram_Global

   type counter is range 0 to 100;

   shared : counter = 0;

   function helper

      shared = shared + 1;


   function wrapper

      helper;


   task A

      loop
         helper;



   task B

      loop
         wrapper;




